# wintea

./: CMakeLists.txt  README.md  build.sh  dummy.py  gen_loading.py  install.sh  make_icons  resources.rc  tea.cpp  topwin.cpp  uninstall.sh
.github/workflows/: build.yml
